<resources>

    <string name="app_name">ZooListDb</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_zoo_animals">Zoo Animals</string>
    <string name="name">Name:</string>
    <string name="location">Location:</string>
    <string name="type">Type:</string>
    <string name="mammal">Mammal</string>
    <string name="bird">Bird</string>
    <string name="reptile">Reptile</string>
    <string name="save">Save</string>
    <string name="hint_name">animal species name</string>
    <string name="hint_location">zoo area</string>
    <string name="alert_title">Animal Name Missing</string>
    <string name="alert_message">Please enter an animal name</string>
    <string-array name="zoo_areas">
        <item>African Rocks</item>
        <item>Asian Passage</item>
        <item>Australian Outback</item>
        <item>Childrens Zoo</item>
        <item>Discovery Zone</item>
        <item>Elephant Odyssey</item>
        <item>Lost Forest</item>
        <item>Northern Frontier</item>
        <item>Panda Canyon</item>
        <item>Reptile Mesa</item>
        <item>Urban Jungle</item>
    </string-array>

</resources>
